# agentmesh

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.ai/: profile.md  rules.md
agentmesh/: __init__.py  cli.py  config.py  context.py  logger.py  mcp_server.py  memory.py  models.py  pipeline.py  router.py  scheduler.py  sync.py  validator.py
agentmesh/adapters/: __init__.py  claude_code.py  codex_cli.py  openclaw.py
examples/: feature-pipeline.yaml  pipeline.py
skills/agentmesh/: SKILL.md
